--- a/style.css
+++ b/style.css
@@ -181,5 +181,6 @@ p {
     text-align: right;
     color: darkblue;
     text-decoration: underline;
+    text-decoration-color: darkblue;
     }
         
