--- a/style.css
+++ b/style.css
@@ -119,7 +119,6 @@ p {
     float: left;
     padding-right: 10px;
     padding-top: 50px;
-    text-align: center;
     }
     
     .row {
@@ -161,6 +160,12 @@ p {
 /* MEDIA QUERY */    
 @media screen and (max-width: 800px) {
     .col-left, .col-right {
+      width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+    }
+  }
+
+@media screen and (max-width: 600px) {
+    .responsive, .div.gallery, div.desc, {
       width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
     }
   }
