--- a/style.css
+++ b/style.css
@@ -160,13 +160,13 @@ p {
 /* MEDIA QUERY */    
 @media screen and (max-width: 800px) {
     .col-left, .col-right {
-      width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+      width: 100%; 
     }
   }
 
-@media screen and (max-width: 600px) {
-    .responsive, .div.gallery, div.desc, {
-      width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+@media screen and (max-width: 900px) {
+    .responsive, .div.gallery, div.desc {
+      width: 100%; 
     }
   }
 
