set banner image

--- a/style.css
+++ b/style.css
@@ -78,14 +78,13 @@ p {
         background-color: 3D5A80;
         border-color: 3D5A80;
         display: inline-block;
-        font-weight: 400;
         line-height: 1.5;
         text-align: center;
         border: 1px solid transparent;
         padding: 6px 12px;
         font-size: 16px;
         border-radius: .25rem;
-        transition: color .15s ease-in-out, background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+        transition: color .15s ease-in-out, background-color 0.15s ease-in-out,border-color .15s ease-in-out, box-shadow 0.15s ease-in-out;
         :hover {
             color: #202020;
             background-color: 3D5A80;
@@ -180,6 +179,12 @@ p {
     font-size: 10px;
     max-width: 365px;
     }
+
+/* SECTIONS */
+
+.gmp1-process {
+    background-image: url("https://i.imgur.com/3IwsVoU.jpg");
+}
     
 /* MEDIA QUERY */    
 @media screen and (max-width: 800px) {
@@ -202,7 +207,6 @@ p {
     font-size: 0.8em;
     }
             
-    
     .center-footer {
     text-align: center;
     padding-bottom: 15px;
