--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ p {
     #gmp1-process {
         width: 100%;
         background-image: url(https://i.imgur.com/XdsGzB4.jpg);
+        height: 405px;
       }
       
     
